# innerq

./: .gitignore  README.md  pyproject.toml  requirements.txt
LongBench/: eval.py  pred.py
lm_eval_patch/lm_eval/models/: __init__.py  huggingface.py
scripts/: run_lmeval.sh  run_longbench.sh  run_speedtest.sh
speedtest/: benchmark_attn_v.cu  benchmark_qkt.cu  benchmark_quantization.cu
src/innerq/: __init__.py  cache.py  lm_eval_innerq_wrapper.py  quant.py
src/innerq/models/: __init__.py  llama_innerq.py  mistral_innerq.py
