[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "innerq"
version = "0.1.0"
description = "Hardware-Aware Tuning-Free Quantization of KV Cache for Large Language Models"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [
  { name = "Mohammadreza Tayaranian Hosseini" }
]

dependencies = [
  "transformers==5.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
